middleware fix
